# rustywiim

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  build.rs
.github/workflows/: release.yml
captures/: WiiM_Amp_20260705_210508.json  WiiM_Amp_Ultra_20260705_210717.json  WiiM_Ultra_20260706_011318.json
captures/test-devices/: Arylic_S10P_WIFI_20260720_005332.json  AudioCastBu_20260708_062004.json  AudioCast_20260714_030113.json  AudioCast_M30_20260720_014924.json  AudioCast_iEAST-02_20260708_095957.json  Audio_Pro_Addon_C5_20260710_073433.FW3.7.x.json  Audio_Pro_Addon_C5_20260710_125359.FW4.6.x.json  Audio_Pro_Addon_C5_20260714_025743.json  WiiM_Amp_20260705_210508.json  WiiM_Amp_20260706_135152.json  WiiM_Amp_20260707_173909.json  WiiM_Amp_Ultra_20260705_210717.json  WiiM_Amp_Ultra_20260706_135124.json  WiiM_Amp_Ultra_20260707_173928.json  WiiM_Mini_20260708_045125.json  WiiM_Mini_20260723_020506.EQTest.json  WiiM_Pro_20260722_082244.json  WiiM_Pro_Plus_20260722_082807.json  WiiM_Ultra_20260706_012945.json  WiiM_Ultra_20260708_022203.group1.json  WiiM_Ultra_20260708_022221.group2.json  WiiM_Ultra_20260708_100034.json  WiiM_Ultra_20260723_020535.EQTest.json
captures/test-sources/: Audio_Pro_Addon_C5_20260710_110204.SpotifyConnect.OldFW.json  Audio_Pro_Addon_C5_20260710_125748.SpotifyConnect.NewFW.json  WiiM_Mini_20260709_061913.BT-playing.json  WiiM_Ultra_20260706_075156.TidalConnect-FLAC.json  WiiM_Ultra_20260706_075156.TidalConnect-HIGH.json  WiiM_Ultra_20260706_075341.usb-mp3.json  WiiM_Ultra_20260706_075502.tunein.json  WiiM_Ultra_20260706_084809.DLNA.json  WiiM_Ultra_20260706_110059.BT-nodev.json  WiiM_Ultra_20260706_110134.HDMI.json  WiiM_Ultra_20260706_110217.LineIn.json  WiiM_Ultra_20260706_110400.Optical.json  WiiM_Ultra_20260706_110457.Phono.json  WiiM_Ultra_20260706_110556.TidalBuiltIn-HIGH.json  WiiM_Ultra_20260706_110856.WiimRadio.json  WiiM_Ultra_20260706_110934.BBCRadio.json  WiiM_Ultra_20260706_111052.Spotify.json  WiiM_Ultra_20260706_111229.YT-GCase.json  WiiM_Ultra_20260708_012808.Spotify.json  WiiM_Ultra_20260708_013054.Spotify-NoPrev.json  WiiM_Ultra_20260708_013054.Spotify.json  WiiM_Ultra_20260708_013737.Spotify-WithPrev.json  WiiM_Ultra_20260708_114841.LocalAndroid.json  WiiM_Ultra_20260719_111807.QobuzConnect.json  iEAST_AudioCast_20260709_053917.unmuted.json  iEAST_AudioCast_20260709_054053.muted.json
data/: io.github.ozbenh.rustywiim.desktop
pics/: create_thumbs.sh
src/: api.rs  capabilities.rs  config.rs  device_state.rs  discovery.rs  icons.rs  lib.rs  main.rs  rustywiim.gresource.xml  scroll_fade_label.rs  ui.rs
src/capture/: commands.rs  commands.yaml  format.rs  mod.rs
src/certs/: audio_pro_key.pem  wiim_ca.pem
src/css/: dark.css  modern.css  system.css
src/device/: api.rs  capabilities.rs  discovery.rs  discovery_manager.rs  gena.rs  manager.rs  mod.rs  playback.rs  state.rs  tcpuart.rs  upnp.rs
src/device/eq/: legacy.rs  lv2.rs  mod.rs
src/experiments/: repro_kiosk_stash.rs  repro_minisize.rs
src/ui/: art_background.rs  brand_icon.rs  devlist.rs  dialogs.rs  engraved_label.rs  flip_cover.rs  icons.rs  kiosk.rs  menu.rs  mod.rs  playback.rs  prompt_entry.rs  rustywiim.gresource.xml  scroll_fade_label.rs  scroll_fade_label_legacy.rs  settings.rs  theme.rs  vfd_scanline.rs  vfd_scanline_overlay.rs  widgets.rs
src/ui/css/: dark.css  modern.css  system.css
src/ui/device_window/: chrome.rs  display.rs  geometry.rs  mod.rs
src/ui/eq/: chrome.rs  graphic.rs  mod.rs  panel.rs  parametric.rs
src/ui/themes/dark/: dark.css
src/ui/views/: common.rs  devlist.rs  io.rs  mod.rs  playback_full.rs  playback_mini.rs  presets.rs  status_bar.rs  volume.rs
(+4 files in other folders)
