[package]
name = "rustywiim"
version = "0.6.1"
edition = "2021"

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
glib = "0.20"
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-channel = "2"
dirs = "5"
anyhow = "1"
socket2 = "0.5"
base64 = "0.22"
chrono = "0.4"
serde_yaml = "0.9"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tar = "0.4"
